fix nav scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -402,13 +402,13 @@ option:last-child {
 
 .language-chooser-menu::-webkit-scrollbar-track {
 	background-color: #ffffff;
-	width: 3px;
+	width: 5px;
 }
 
 .language-chooser-menu::-webkit-scrollbar-thumb {
     background: #34C38D;
 	border-radius: 8px;
-	width: 3px;
+	width: 5px;
 }
 
 .language-chooser-menu div {
@@ -538,20 +538,36 @@ option:last-child {
 }
 
 .menu-list {
-	height: auto;
-	overflow: auto;
-	padding: 0px;
+    overflow-x: auto;
+    padding: 0px;
+    margin: 0px;
+    position: fixed;
+    top: 118px;
+    bottom: 95px;
+    transform: scaleX(-1);
+    width: 270px;
+}
+
+.menu-list::-webkit-scrollbar-track {
+	background-color: #ffffff;
+	width: 5px;
+}
+
+.menu-list::-webkit-scrollbar-thumb {
+    background: #34C38D;
+	width: 5px;
 }
 
 .menu-list li {
 	display: block;
-	margin: 0px 0px 0px 0px;
-	font-size: 14px;
+    transform: scaleX(-1);
+    margin: 0px 0px 0px 0px;
+    font-size: 14px;
 }
 
 .menu-list li a {
 	display: block;
-	padding: 10px 0px 10px 40px;
+    padding: 10px 0px 10px 40px;
 }
 
 .menu-active {
